# EcoSimulator

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.16  CMakeLists.txt.user.3.2-pre1  ECO_SIM.cbp  Makefile  README.md  age_constrainer.cpp  age_constrainer.h  central_widget.cpp  central_widget.h  cmake_install.cmake  constants.h  constrainers.cpp  constrainers.h  debuger.h  display_area.cpp  display_area.h  eco_data.h  enviromnent_illumination.cpp  enviromnent_illumination.h  environment_manager.cpp  environment_manager.h  environment_soil_humidity.cpp  environment_soil_humidity.h  environment_spatial_hashmap.cpp  environment_spatial_hashmap.h  environment_temp.cpp  environment_temp.h  growth_manager.cpp  growth_manager.h  helper.cpp  helper.h  icons.qrc  illumination_constrainer.cpp  illumination_constrainer.h  input_widgets.cpp  input_widgets.h  launcher.py  launcher.zsh  (+43 more)
data_holders/: environment_spatial_hashmap.cpp  environment_spatial_hashmap.h  pixel_data.cpp  pixel_data.h  plant_rendering_data.h  plant_rendering_data_container.h
gui/: main_window.cpp  main_window.h
gui/dialogs/: monthly_edit_dlg.cpp  monthly_edit_dlg.h  monthly_humidity_edit_dlg.h  monthly_illumination_edit_dlg.h  monthly_temp_edit_dlg.h  start_config_dialog.cpp  start_config_dialog.h
gui/rendering/: render_manager.cpp  render_manager.h  renderer.cpp  renderer.h  resource_visual_converters.cpp  resource_visual_converters.h
gui/widgets/: central_widget.cpp  central_widget.h  input_widgets.cpp  input_widgets.h  overview_widget.cpp  overview_widget.h  plant_configuration_widget.cpp  plant_configuration_widget.h  simulation_configuration_widget.cpp  simulation_configuration_widget.h
icons/: icons.qrc~
include/ecodata-tracker/: central_widget.h  db_manager.h  main_window.h  row_data.h  settings.h  tracker.h  utils.h
include/statistical-analysis-tool/: analysis_configuration.h  analysis_point.h  analyzer.h  category_analyzer.h  category_properties.h  central_widget.h  constants.h  dependency_analyzer.h  dialogs.h  dice_roller.h  distribution_factory.h  input_widget.h  main.h  main_window.h  point_drawer.h  point_factory.h  point_map.h  point_spatial_hashmap.h  radial_distribution.h  radial_distribution_analyzer.h  reproducer.h  reproduction_configuration.h  utils.h
math/: dice_roller.cpp  linear_equation.cpp  linear_equation.h
resources/: environment_illumination.cpp  environment_illumination.h  environment_manager.cpp  environment_manager.h  environment_soil_humidity.cpp  environment_soil_humidity.h  environment_temp.cpp  environment_temp.h
shared_lib/: CMakeLists.txt
simulator/core/: simulation_configuration.h  simulator_manager.cpp  simulator_manager.h
simulator/plants/: constrainers.cpp  constrainers.h  growth_manager.cpp  growth_manager.h  plant.cpp  plant.h  plant_factory.cpp  plant_factory.h  plants_storage.cpp  plants_storage.h
utils/: callback_listener.cpp  callback_listener.h  time_manager.cpp  time_manager.h  utils.cpp  utils.h
